--- a/CSS/style.css
+++ b/CSS/style.css
@@ -70,6 +70,12 @@
   .section {
     background-color: var(--sage);
   }
+
+  .gradient {
+    background: linear-gradient(90deg, rgba(245,79,41,1) 0%, rgba(255,151,79,1) 100%);
+    height: 2px;
+  }
+
   #contact {
     width: 400px;
     text-align: center;
