--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,186 +1,297 @@
 /* variables declared here - these are the colors for our pages, as well as the font stacks and sizes. */
+
 :root {
-    --concealment: #405952;
-    --sage: #9C9B7A;
-    --yellow: #FFD393;
-    --orange: #FF974F;
-    --glow: #F54F29;
-    --font-size: 1.3rem;
-    --mono: "Playfair Display", serif;
-    --sans: "Lato", sans-serif;
-  }
-  
-  html{
-    box-sizing: border-box;
-  }
-  *,
-  *::before,
-  *::after {
-    box-sizing: inherit;
-  }
-  body {
-    padding: 0;
-    margin: 0;
-    font-family: var(--sans);
-    background-color: var(--yellow);
-    color: var(--sage);
-    font-size: var(--font-size);
-  }
-  h1, h2, h3 {
-    margin: 0;
-  }
-  a {
-    color: var(--concealment);
-  }
-  a:hover {
-    color: var(--glow);
-    text-decoration: none;
-  }
-  
-  /* intro styles */
-  
-  #intro {
-    padding: 4rem 1rem 10rem 1rem;
-    max-width: 1200px;
-    margin: 0 auto;
-  }
-  #intro p {
-    font-size: 1rem;
-    line-height: 1.5;
-  }
-  #intro .name {
-    font-family: var(--sans);
-  }
-  .name span {
-    font-family: var(--mono);
-    font-size: 4rem;
-    font-weight: bold;
-    color: var(--concealment);
-    display: block;
-  }
-  #intro h2 {
-    font-size: 4rem;
-    font-weight: normal;
-    font-family: var(--mono);
-    font-weight: bold;
-    color: var(--orange)
-  }
-  
-  /* contact section */
-  .section {
-    background-color: var(--sage);
-  }
+  --concealment: #405952;
+  --sage: #9C9B7A;
+  --yellow: #FFD393;
+  --orange: #FF974F;
+  --glow: #F54F29;
+  --font-size: 1.3rem;
+  --mono: "Playfair Display", serif;
+  --sans: "Lato", sans-serif;
+}
 
-  .gradient {
-    background: linear-gradient(90deg, rgba(245,79,41,1) 0%, rgba(255,151,79,1) 100%);
-    height: 2px;
-  }
+html{
+  box-sizing: border-box;
+}
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+body {
+  padding: 0;
+  margin: 0;
+  font-family: var(--sans);
+  background-color: var(--yellow);
+  color: var(--sage);
+  font-size: var(--font-size);
+}
+h1, h2, h3 {
+  margin: 0;
+}
+a {
+  color: var(--concealment);
+}
+a:hover {
+  color: var(--glow);
+  text-decoration: none;
+}
 
-  #contact {
-    width: 400px;
+img {
+width: 100%;
+}
+
+/* intro styles */
+
+#intro {
+  padding: 4rem 1rem 10rem 1rem;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+#intro p {
+  font-size: 1rem;
+  line-height: 1.5;
+}
+#intro .name {
+  font-family: var(--sans);
+}
+.name span {
+  font-family: var(--mono);
+  font-size: 4rem;
+  font-weight: bold;
+  color: var(--concealment);
+  display: block;
+}
+#intro h2 {
+  font-size: 4rem;
+  font-weight: normal;
+  font-family: var(--mono);
+  font-weight: bold;
+  color: var(--orange)
+}
+
+/* contact section */
+.section {
+  background-color: var(--sage);
+}
+
+.section-conceal {
+  background-color: var(--concealment);
+}
+
+.section-dk {
+background-color: var(--sage);
+color: var(--yellow);
+}
+
+.gradient {
+  background: linear-gradient(90deg, rgba(245,79,41,1) 0%, rgba(255,151,79,1) 100%);
+  height: 2px;
+}
+
+#contact {
+  width: 400px;
+  text-align: center;
+  margin: 0 auto;
+  padding: 3rem 0;
+}
+#contact p {
+  color: var(--yellow);
+}
+#contact p:last-child {
+  margin-top: 3rem;
+}
+#contact h2{
+  font-family: var(--mono);
+  font-weight: bold;
+  color: var(--concealment);
+}
+ /* navbar */
+
+nav {
+  font-family: var(--sans);
+  font-size: 80%;
+  padding: 1rem;
+}
+
+nav h1 a {
+  font-family: var(--mono);
+  font-weight: bold;
+}
+
+nav h1 a [class*="fa-"] {
+  font-size: 100%;
+  color: var(--sage);
+}
+
+nav ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+
+nav li:first-child {
+  flex-basis: 100%;
+  text-align: center;
+}
+
+nav [class*="fa-"] {
+  font-size: 150%;
+  color: var(--sage);
+}
+
+nav a {
+  color: var(--concealment);
+  text-decoration: none;
+  display: block;
+}
+
+nav a:hover, 
+nav [class*="fa-"]:hover {
+  color: var(--glow);
+}
+
+.button {
+  background-color: var(--orange);
+  padding: 0.5rem;
+  border-radius: 5px;
+  color: var(--concealment);
+  font-family: var(--mono);
+  text-decoration: none;
+}
+
+.button:hover {
+  color: var(--concealment);
+  background-color: var(--glow);
+}
+
+/* footer section */
+footer {
     text-align: center;
-    margin: 0 auto;
-    padding: 3rem 0;
-  }
-  #contact p {
-    color: var(--yellow);
-  }
-  #contact p:last-child {
-    margin-top: 3rem;
-  }
-  #contact h2{
-    font-family: var(--mono);
-    font-weight: bold;
-    color: var(--concealment);
-  }
-   /* navbar */
-  
-  nav {
-    font-family: var(--sans);
-    font-size: 80%;
-    padding: 1rem;
-  }
-  
-  nav h1 a {
-    font-family: var(--mono);
-    font-weight: bold;
-  }
-  
-  nav h1 a [class*="fa-"] {
-    font-size: 100%;
-    color: var(--sage);
-  }
-  
-  nav ul {
+    padding: 4rem 0;
+}
+footer ul {
     list-style-type: none;
     padding: 0;
-    margin: 0;
+    margin: 2rem 0;
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
-    align-items: center;
-    gap: 2rem;
+    gap: 3rem;
+    font-size: 3rem;
+}
+
+/* projects section */
+
+#projects {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 4rem 1rem;
+  background-color: var(--concealment);
+}
+#projects h2{
+font-size: 2.5rem;
+margin-bottom: calc(2.5rem * 1.5);
+font-family: var(--mono);
+color: var(--orange);
+}
+
+#projects h3{
+color: var(--concealment);
+font-family: var(--mono);
+}
+
+#projects h4{
+font-size: 1rem;
+font-family: var(--sans);
+margin: 0;
+}
+
+#projects a{
+color: var(--concealment);
+}
+
+#projects a:hover{
+color: var(--glow);
+}
+
+.blackbox{
+background-color: var(--sage);
+color: var(--yellow);
+padding: 1rem;
+border-radius: 10px;
+font-size: 1rem;
+line-height: 1.5;
+}
+
+#projects ul {
+list-style-type: none;
+padding: 0;
+margin: 0;
+display: flex;
+flex-flow: row wrap;
+justify-content: flex-start;
+gap: 1rem;
+font-size: 1rem;
+color: var(--orange);
+}
+
+#projects img {
+margin: 2rem 0 4rem 0;
+border-left: 1px solid var(--orange);
+border-top: 1px solid var(--orange);
+border-radius: 25px;
+padding: 1rem;
+}
+
+@media (min-width: 550px) {
+article {
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  gap: 1rem;
+}
+#projects img {
+  grid-column: 1/7;
+  grid-row:1/2;
+}
+.text {
+  grid-column: 6/11;
+  order: 2;
+  text-align: right;
+  grid-row: 1/2;
+}
+#projects ul {
+  justify-content: flex-end;
+}
+}
+
+#projects .reverse .text {
+  grid-column: 1/6;
+  order: 2;
+  text-align: left;
+}
+#projects .reverse img {
+  grid-column: 5/11;
+  grid-row: 1/2;
+}
+#projects .reverse ul {
+  justify-content: flex-start;
+}
+
+@media (min-width: 850px){
+  nav {
+    max-width: 1200px;
+    margin: 0 auto;
   }
-  
   nav li:first-child {
-    flex-basis: 100%;
-    text-align: center;
+    flex-basis: auto;
+    text-align: left;
+    margin-right: auto;
   }
-  
-  nav [class*="fa-"] {
-    font-size: 150%;
-    color: var(--sage);
-  }
-  
-  nav a {
-    color: var(--concealment);
-    text-decoration: none;
-    display: block;
-  }
-  
-  nav a:hover, 
-  nav [class*="fa-"]:hover {
-    color: var(--glow);
-  }
-  
-  .button {
-    background-color: var(--orange);
-    padding: 0.5rem;
-    border-radius: 5px;
-    color: var(--concealment);
-    font-family: var(--mono);
-    text-decoration: none;
-  }
-  
-  .button:hover {
-    color: var(--concealment);
-    background-color: var(--glow);
-  }
-  
-  /* footer section */
-  footer {
-      text-align: center;
-      padding: 4rem 0;
-  }
-  footer ul {
-      list-style-type: none;
-      padding: 0;
-      margin: 2rem 0;
-      display: flex;
-      flex-flow: row wrap;
-      justify-content: center;
-      gap: 3rem;
-      font-size: 3rem;
-  }
-  
-  @media (min-width: 850px){
-    nav {
-      max-width: 1200px;
-      margin: 0 auto;
-    }
-    nav li:first-child {
-      flex-basis: auto;
-      text-align: left;
-      margin-right: auto;
-    }
-  }
+}
