created about.html, imported an image, and updated some styling on the new linked page

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -284,6 +284,10 @@ article {
   justify-content: flex-start;
 }
 
+#self {
+  max-width: 280px;
+}
+
 @media (min-width: 850px){
   nav {
     max-width: 1200px;
